# E2E_Encrypted_Chat

./: .gitignore  Cargo.toml  LICENSE  PRINCIPLE.md  README.md  build.rs
src/: app_config.rs  config.rs  lib.rs
src/attachments/: kind.rs  mod.rs  receiver.rs  sender.rs
src/client/: app.rs  attachment_store.rs  clipboard.rs  crypto.rs  handshake.rs  initialization.rs  input.rs  keyboard.rs  local_server.rs  mod.rs  network.rs  notifier.rs  receiver.rs  safety.rs  session.rs  sounds.rs  ui.rs  utils.rs
src/crypto/: core.rs  group.rs  invite.rs  mod.rs  room.rs  safety.rs  transport.rs
src/protocol/: attachment.rs  invite.rs  line.rs  local_event.rs  member.rs  mod.rs
src/server/: app.rs  broadcast.rs  connection.rs  invite.rs  logging.rs  mod.rs  room.rs
src/transport/: heartbeat.rs  mod.rs  packet.rs
src/ui/: banner.rs  clipboard.rs  help.rs  keyboard.rs  mod.rs  notifier.rs  sounds.rs  tui.rs
src/util/: path.rs
tests/: integration_chat.rs
